[gd_scene load_steps=9 format=3 uid="uid://cjmnpw24gacdq"]

[ext_resource type="Script" path="res://Scene's/ai_vs_ai.gd" id="1_e7f7j"]
[ext_resource type="Shader" path="res://Script's/Background.gdshader" id="2_xqlji"]
[ext_resource type="Texture2D" uid="uid://bw01l7ce8ixxy" path="res://Asset's/Background.png" id="3_7tps8"]
[ext_resource type="Texture2D" uid="uid://bmpaoidd6bngi" path="res://Asset's/Cat Hands.png" id="4_p0bh2"]
[ext_resource type="Script" path="res://addons/godot_ml_agents/manager.gd" id="5_7o5gp"]
[ext_resource type="Script" path="res://Scene's/ai_player.gd" id="6_vayc3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0c6tu"]
shader = ExtResource("2_xqlji")
shader_parameter/direction = Vector2(-1, -1)
shader_parameter/speed_scale = 0.3

[sub_resource type="LabelSettings" id="LabelSettings_rkpd6"]
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Main Scene" type="Node2D"]
script = ExtResource("1_e7f7j")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_0c6tu")
offset_right = 642.0
offset_bottom = 360.0
texture = ExtResource("3_7tps8")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Cat Hand" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(320, 104)
rotation = 3.14159
scale = Vector2(0.9, 0.9)
texture = ExtResource("4_p0bh2")
hframes = 3

[node name="Buttons" type="Node2D" parent="."]

[node name="Restart" type="Button" parent="Buttons"]
texture_filter = 1
offset_left = 16.0
offset_top = 160.0
offset_right = 144.0
offset_bottom = 192.0
text = "New Game"
metadata/_edit_use_anchors_ = true

[node name="Text" type="Label" parent="Buttons"]
offset_left = 64.0
offset_top = 96.0
offset_right = 576.0
offset_bottom = 256.0
label_settings = SubResource("LabelSettings_rkpd6")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AgentsManager" type="Node" parent="."]
script = ExtResource("5_7o5gp")
wait_frames = 0

[node name="Player1" type="Node" parent="."]
script = ExtResource("6_vayc3")
wait_frames = 0
discrete_space_size = 1

[node name="Cat Hand2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(320, 248)
scale = Vector2(0.9, 0.9)
texture = ExtResource("4_p0bh2")
hframes = 3
metadata/_edit_group_ = true

[node name="Player2" type="Node" parent="."]
script = ExtResource("6_vayc3")
wait_frames = 0
team = 1
discrete_space_size = 1

[connection signal="pressed" from="Buttons/Restart" to="." method="_on_restart_pressed"]
